# my-neuro

./: .env.example  .gitignore  pyproject.toml
full-hub/: asr_api.py
live-2d/: config.json  main.js
memos_system/config/: memos_config.json
memos_system/data/qdrant/: meta.json
scripts/: download-models.sh  start-asr.sh  start-bert.sh  start-live2d.sh  start-memos-webui.sh  start-memos.sh  start-rag.sh
